--- a/Presentation/appsettings.Production.json
+++ b/Presentation/appsettings.Production.json
@@ -7,8 +7,8 @@
   },
   "ConnectionStrings": {
     "Context": "Server=(LocalDB)\\MSSQLLocalDB;Database=MyDatabase;Trusted_Connection=True;"
-  },  
+  },
   "Redis": {
-    "ConnexionURL": "127.0.0.1:6379"
+    "ConnexionURL": "127.0.0.1:6379,password=password"
   }
 }
