--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Context": "Server=(LocalDB)\\MSSQLLocalDB;Database=MyDatabase;Trusted_Connection=True;"
+  },
+  "Redis": {
+    "ConnexionURL": "127.0.0.1:6379,password=password"
+  },
   "AllowedHosts": "*"
 }
