--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -13,6 +13,8 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.1" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="StackExchange.Redis" Version="2.6.96" />
     </ItemGroup>
 
 </Project>
