--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
         <PackageReference Include="StackExchange.Redis" Version="2.6.96" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.1" />
     </ItemGroup>
 
     <ItemGroup>
